# beet-core

./: Cargo.toml  README.md
.claude/: CLAUDE.md  arm64-notes.md  openbsd-arm64-notes.md  plan.md
api/console/: Cargo.toml
api/console/src/: lib.rs
api/fs/: Cargo.toml
api/fs/src/: lib.rs
api/keyboard/: Cargo.toml
api/keyboard/src/: lib.rs
api/procman/: Cargo.toml
api/procman/src/: lib.rs
api/storage/: Cargo.toml
api/storage/src/: lib.rs
apps/: link-user.x
apps/beetos-test/: Cargo.toml
apps/beetos-test/src/: main.rs
apps/coreutils/: Cargo.toml
apps/coreutils/src/: main.rs
apps/hello/: Cargo.toml
apps/hello-std/: Cargo.toml
apps/hello-std/src/: main.rs
apps/hello/src/: main.rs
apps/shell/: Cargo.toml
apps/shell/src/: main.rs  ramfs.rs  tarfs.rs
beetos/: Cargo.toml
beetos/src/: fb_console.rs  font.rs  lib.rs
docs/: aarch64-page-tables.md
examples/async-demo/: Cargo.toml
examples/async-demo/src/: main.rs
loader/: Cargo.toml
loader/src/: boot.rs  bootconfig.rs  consts.rs  load.rs  main.rs  panic.rs
os/app-manifest/: Cargo.toml
os/app-manifest/src/: lib.rs
os/fs/: Cargo.toml
os/fs/src/: main.rs  tarfs.rs
os/log/: Cargo.toml
os/log/src/: main.rs
os/procman/: Cargo.toml
os/procman/src/: main.rs
xous/api/log/: Cargo.toml
xous/api/log/src/: lib.rs
xous/api/names/src/: api.rs  lib.rs
xous/api/ticktimer/: Cargo.toml
xous/api/ticktimer/src/: api.rs  lib.rs
xous/async-rt/: Cargo.toml
xous/async-rt/src/: combinators.rs  executor.rs  lib.rs  reactor.rs  server.rs  tests.rs  timer.rs  waker.rs
xous/ipc/: Cargo.toml
xous/ipc/src/: buffer.rs
xous/kernel/: Cargo.toml  banner.txt  build.rs  link-aarch64.x  link-bcm2712.x  link-qemu-virt.x
xous/kernel/src/: fb_console.rs  font.rs  irq.rs  kfuture.rs  main.rs  mem.rs  process.rs  scheduler.rs  server.rs  services.rs  syscall.rs  test.rs
xous/kernel/src/arch/: mod.rs
xous/kernel/src/arch/aarch64/: asm.S  asm.rs  backtrace.rs  boot.rs  elf.rs  irq.rs  mem.rs  mod.rs  panic.rs  process.rs  rand.rs  start.S  syscall.rs
xous/kernel/src/arch/hosted/: mod.rs
xous/kernel/src/debug/: commands.rs  macros.rs  mod.rs  serial.rs
xous/kernel/src/platform/: mod.rs  rand.rs
xous/kernel/src/platform/apple_t8103/: cache.rs  mod.rs  rand.rs  wdt.rs
xous/kernel/src/platform/bcm2712/: gic.rs  mod.rs  timer.rs  uart.rs
xous/kernel/src/platform/qemu_virt/: blk.rs  fb.rs  gic.rs  input.rs  mod.rs  net.rs  net_stack.rs  timer.rs  uart.rs  virtio.rs
xous/kernel/src/shell/: mod.rs  ramfs.rs
xous/log/: Cargo.toml
xous/ticktimer/: Cargo.toml
xous/ticktimer/src/: main.rs
xous/ticktimer/src/platform/: mod.rs
xous/trng/: Cargo.toml
xous/trng/src/: lib.rs
xous/trng/src/platform/: mod.rs
xous/xous-rs/: Cargo.toml  build.rs
xous/xous-rs/src/: carton.rs  definitions.rs  lib.rs  stringbuffer.rs  syscall.rs
xous/xous-rs/src/arch/: mod.rs
xous/xous-rs/src/arch/aarch64/: irq.rs  mem.rs  mod.rs  process.rs  syscall_impl.rs  threading.rs
xous/xous-rs/src/arch/hosted/: mem.rs  process.rs
xous/xous-rs/src/arch/test/: mem.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
