[workspace]
resolver = "2"
members = [
    "beetos",
    "xous/kernel",
    "xous/xous-rs",
    "xous/ipc",
    "xous/api/log",
    "xous/api/names",
    "xous/api/ticktimer",
    "xous/log",
    "xous/names",
    "xous/ticktimer",
    "xous/trng",
    "os/app-manifest",
    "xtask",
    # loader is no_std + aarch64 only, excluded from default workspace for now
]
exclude = [
    "loader",
]

[workspace.dependencies]
rkyv = { version = "0.8.13", default-features = false, features = ["alloc", "bytecheck"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(beetos)'] }
