[workspace]
resolver = "2"
members = [
    "beetos",
    "xous/kernel",
    "xous/xous-rs",
    "xous/ipc",
    "xous/api/log",
    "xous/api/names",
    "xous/api/ticktimer",
    "xous/log",
    "xous/names",
    "xous/ticktimer",
    "xous/trng",
    "api/keyboard",
    "api/console",
    "api/procman",
    "api/fs",
    "api/storage",
    "os/app-manifest",
    "xtask",
    # apps/ and loader are no_std + aarch64 only, excluded from default workspace
]
exclude = [
    "loader",
    "apps/hello",
    "apps/hello-std",
    "apps/shell",
    "os/procman",
    "os/fs",
    "apps/coreutils",
]

[workspace.dependencies]
rkyv = { version = "0.8.13", default-features = false, features = ["alloc", "bytecheck"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(beetos)'] }
