[package]
name = "coreutils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "BeetOS coreutils — ls, cat, mkdir, rm, write, blkinfo"

[[bin]]
name = "coreutils"
path = "src/main.rs"

[dependencies]
xous = { path = "../../xous/xous-rs" }
beetos-api-fs = { path = "../../api/fs" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(beetos)'] }
