[package]
name = "hello"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "hello"
path = "src/main.rs"

[dependencies]
xous = { path = "../../xous/xous-rs" }
beetos = { path = "../../beetos", features = ["fb"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(beetos)'] }
