[package]
name = "procman"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "BeetOS Process Manager service"

[[bin]]
name = "procman"
path = "src/main.rs"

[dependencies]
xous = { path = "../../xous/xous-rs" }
beetos-api-procman = { path = "../../api/procman" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(beetos)'] }
