[package]
authors = [
    "Sean Cross <sean@xobs.io>",
    "Foundation Devices, Inc. <hello@foundation.xyz>",
]
description = "BeetOS kernel (Xous microkernel)"
license = "MIT OR Apache-2.0"
edition = "2021"
name = "beetos-kernel"
version = "0.1.0"
resolver = "2"

[features]
debug-print = []
log-serial = []
production = []
integration-test = []
platform-qemu-virt = []
platform-apple-t8103 = []

[dependencies]
bitflags = "1.2.1"
bitvec = { version = "1.0.1", default-features = false }
beetos = { path = "../../beetos" }
xous = { path = "../xous-rs", features = ["forget-memory-messages"] }

# Hardware dependencies will be added in M1 when we implement arch/aarch64
# [target.'cfg(beetos)'.dependencies]

[target.'cfg(not(target_os = "none"))'.dependencies]
crossbeam-channel = "0.5.15"
hex = "0.4"
once_cell = "1.20.3"
rand = "0.7.3"
rand_chacha = "0.3.1"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
xous = { path = "../xous-rs", features = [
    "forget-memory-messages",
    "processes-as-threads",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(beetos)', 'cfg(feature, values("trace-systemview", "platform-qemu-virt", "platform-apple-t8103"))'] }
