[package]
name = "xous"
version = "0.11.0"
authors = [
    "Sean Cross <sean@xobs.io>",
    "Foundation Devices, Inc. <hello@foundation.xyz>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "System call interface for Xous"

[features]
default = []
forget-memory-messages = []
rustc-dep-of-std = ['core', 'beetos/rustc-dep-of-std']
processes-as-threads = []

[dependencies]
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }

[target.'cfg(target_os = "none")'.dependencies]
beetos = { path = "../../beetos" }

[target.'cfg(target_os = "beetos")'.dependencies]
beetos = { path = "../../beetos" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(beetos)'] }
